fixed scrollbar issue on IE

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,5 @@
   width: 100%;
   overflow: auto;
 }
+
+@-ms-viewport { width: device-width; }
